[tool.poetry]
name = "llava-local-agent"
package-mode = false
version = "0.1.0"
description = "Local LLaVA-style agent project"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
pillow = "^10.4.0"
python-dotenv = "^1.0.1"
rich = "^13.8.1"
python-multipart = "^0.0.9"
tqdm = "^4.4.0"
requests = "^2.32.0"
ollama = "^0.11.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.29.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
